--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ src="https://www.facebook.com/tr?id=382878147739402&ev=PageView&noscript=1"
         margin-top: 50px;
     }
     .logo img {
-        width: 150px;
+        width: 200px;
         border-radius: 12px;
     }
     h1 {
@@ -72,20 +72,22 @@ src="https://www.facebook.com/tr?id=382878147739402&ev=PageView&noscript=1"
     }
     .download-btn {
         display: inline-block;
-        padding: 12px 20px;
+        padding: 10px 10px;
         margin: 10px 0;
         background: linear-gradient(90deg, #00ffae, #00c8ff);
         color: black;
         font-weight: bold;
         border-radius: 8px;
         text-decoration: none;
-        animation: pulse 1.5s infinite;
+        animation: pulse 1.25s infinite;
+        width: 290px;
+        height: 25px;
     }
     .download-btn:hover {
-        opacity: 0.9;
+        opacity: 0.11;
     }
      .alert-btn:hover {
-        opacity: 0.9;
+        opacity: 0.11;
     }
     .alert-btn {
         display: inline-block;
@@ -179,5 +181,6 @@ src="https://www.facebook.com/tr?id=382878147739402&ev=PageView&noscript=1"
 
 </body>
 </html>
+
 
 
