--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ src="https://www.facebook.com/tr?id=382878147739402&ev=PageView&noscript=1"
 </a>
 
 <h2>FULL GAME RATES</h2>
-<div class="rate">
+<!-- <div class="rate">
     <p>SINGLE DIGIT-  ₹10-₹100</p>
     <p>JODI DIGIT-    ₹10-₹1000</p>
     <p>SINGLE PANNA-  ₹10-₹1600</p>
@@ -157,7 +157,7 @@ src="https://www.facebook.com/tr?id=382878147739402&ev=PageView&noscript=1"
     <p>TRIPLE PANNA-  ₹10-₹7000</p>
     <p>HALF SANGAM-   ₹10-₹10000</p>
     <p>FULL SANGAM-   ₹10-₹100000</p>
-</div>
+</div> -->
 
 <a href="https://lotus-3655.in/app/lotus365.apk" class="download-btn">⬇ DOWNLOAD APP NOW ⬇
   
@@ -175,12 +175,13 @@ src="https://www.facebook.com/tr?id=382878147739402&ev=PageView&noscript=1"
 
 
 <p>All Results are perfect & On Time</p>
-<p>Minimum deposit Only <span class="money">₹100/-</span></p>
-<p>Minimum Withdrawals only <span class="money">₹500/-</span></p>
-<p>Withdrawal Timing 24×7 </p>
+<p> ✅Safe & Secure</p>
+<p>✅Updated Daily</p>
+<p>Support Timing 24×7 </p>
 
 </body>
 </html>
+
 
 
 
